fixed issue with benefits image not centering on smaller screens by adding margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,12 @@ hr {
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
 }
+
+#times {
+    background: url("../images/dublin-city.webp") no-repeat center/cover;
+    display: flex;
+    flex-wrap: wrap; 
+}
 /* Footer */
 #social-networks {
     text-align: center;
@@ -154,6 +160,7 @@ hr {
     background: url("../images/reasons-image.webp") no-repeat top center/cover;
     height: 90vw;
     width: 90vw;
+    margin: 0 auto;
     margin-bottom: 20px;
     border-radius: 50%;
     max-width: 300px;
@@ -203,7 +210,7 @@ hr {
     }
     #cover-text {
         width: 300px;
-        right: 70px;
+        right: 50px;
     }
     #benefits-image {
     display: flex;
@@ -260,7 +267,7 @@ hr {
         align-self: flex-start;
     }
 
-    #benefits-pyhsical > div {
+    #benefits-physical > div {
         align-self: flex-end;
     }
 }
